--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
 	"private": true,
 	"scripts": {
 		"deploy": "wrangler deploy",
-		"dev": "wrangler dev",
-		"start": "wrangler dev",
+		"dev": "wrangler dev --local --port 8787",
+		"start": "wrangler dev --local --port 8787",
 		"test": "vitest"
 	},
 	"devDependencies": {
 		"@cloudflare/vitest-pool-workers": "^0.8.19",
 		"vitest": "~3.2.0",
-		"wrangler": "^4.46.0"
+		"wrangler": "^3.78.0"
+	},
+	"overrides": {
+		"youch": "2.2.2"
 	}
 }
